# yolov5-socket

./: CMakeLists.txt  README.md  ano_detect_main.cpp  install.sh  run_client.cpp
include/: DeepNet.h  Logr.h  Recognize.h  RegistryFactory.h  client.h  logger.h  server.h  yolov5.h
src/: DeepNet.cpp  Logr.cpp  Recognize.cpp  client.cpp  logger.cpp  server.cpp  yolov5.cpp
